--- a/eQueue/eQueue-war/web/index.xhtml
+++ b/eQueue/eQueue-war/web/index.xhtml
@@ -7,21 +7,23 @@
 
     <h:head>
         <title>eQueue</title>
+        <link rel="shortcut icon" type="image/x-icon" href="#{resource['images/favicon.ico']}" />
         <style>
             body {
-                background-image: url("#{resource['images/queue-background.gif']}");
+                background-image: url("#{resource['images/background-2.png']}");
                 background-size: cover;
                 background-repeat: no-repeat;
                 background-position: center;
+                background-attachment: fixed;
             }
         </style>
     </h:head>
     <h:body>
-        <h1 style="margin: 25px 0px 0px 35px; float: left;">eQueue Employee Management System</h1>
+        <!--<h1 style="margin: 25px 0px 0px 35px; float: left;">eQueue Employee Management System</h1>-->
 
         <h:panelGroup rendered="#{sessionScope.employeeIsLogin == false}">       
-            <h:form id="loginForm" style="float: right; height: 375px; width: 250px; text-align: center; margin: 10% 6.5%; background-color: linen;">
-                <p:graphicImage library="images" name="equeue-logo.png" height="120" width="250" alt="eQueue Login Form" />
+            <h:form id="loginForm" style="float: right; height: 300px; width: 250px; text-align: center; margin: 12.5% 7.5%; background-color: aliceblue; opacity: 0.9">
+                <p:graphicImage library="images" name="modified_logo.png" height="120" width="250" alt="eQueue Login Form" style="background-color: aliceblue" />
                 <p:inputText id="username" placeholder="USERNAME" value="#{employeeLoginManagedBean.username}" size="16" required="true" requiredMessage="Username is required" maxlength="32">
                     <f:validateLength minimum="4" />
                 </p:inputText>
@@ -33,10 +35,8 @@
                 <br />
                 <br />
                 <section>
+                    <p:commandButton type="reset" value="Clear" icon="fa fa-undo" />&nbsp;&nbsp;
                     <p:commandButton type="submit" value="Login" actionListener="#{employeeLoginManagedBean.login}" icon="fa fa-sign-in" />
-                    <br />
-                    <br />
-                    <p:commandButton type="reset" value="Clear" icon="fa fa-undo" />
                 </section>
 
                 <p:growl life="2000">
