modified small bugs on favicon

--- a/eQueue/eQueue-war/web/homepage.xhtml
+++ b/eQueue/eQueue-war/web/homepage.xhtml
@@ -96,7 +96,7 @@
                     <h:panelGrid class="vertically-centered">
                         <span class="analytics-icon custom-icon-homepage"/>
                         <div class="link-text-styling">
-                            <p style="margin: 0">Data</p>
+                            <p style="margin: 0">Business</p>
                             <p style="margin: 0">Analytics</p>
                         </div>
                     </h:panelGrid>
