WIP data init + small fixes

--- a/eQueue/eQueue-war/web/resources/ezcomp/viewMenuItem.xhtml
+++ b/eQueue/eQueue-war/web/resources/ezcomp/viewMenuItem.xhtml
@@ -56,8 +56,8 @@
                         <p:column>
                             <h:outputLabel value="Description: " />
                         </p:column>
-                        <p:column>
-                            <h:outputText value="#{viewMenuItemManagedBean.menuItemToView.menuItemDescription}" />
+                        <p:column  style="max-width: 200px">
+                            <h:outputText value="#{viewMenuItemManagedBean.menuItemToView.menuItemDescription}"/>
                         </p:column>
                     </p:row>
 
