--- a/eQueue/eQueue-war/web/resources/ezcomp/viewMenuCategory.xhtml
+++ b/eQueue/eQueue-war/web/resources/ezcomp/viewMenuCategory.xhtml
@@ -12,7 +12,7 @@
 
         <h:form id="formViewMenuCategory">
 
-            <p:dialog id="dialogViewMenuCategory" widgetVar="dialogViewMenuCategory" header="View Menu Category" closable="true">
+            <p:dialog id="dialogViewMenuCategory" widgetVar="dialogViewMenuCategory" header="View Menu Category" closable="true" height="500">
 
                 <p:panelGrid>
 
