index button swap

--- a/eQueue/eQueue-war/web/transactionManagement.xhtml
+++ b/eQueue/eQueue-war/web/transactionManagement.xhtml
@@ -181,7 +181,7 @@
                     </p:dataTable>
 
                     <div class="text-center">
-                        <p:graphicImage rendered="#{transactionManagementManagedBean.isDiningTableSelected == false and transactionManagementManagedBean.isPastTransactionSelected == false}" library="images" name="equeue-logo.png" height="160" width="500" />
+                        <p:graphicImage rendered="#{transactionManagementManagedBean.isDiningTableSelected == false and transactionManagementManagedBean.isPastTransactionSelected == false}" library="images" name="modified_logo.png" height="320" width="900" />
                     </div>
                 </h:form>
 
